--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@tsparticles/engine": "^3.2.2",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.2.2",
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.7",
     "mini-svg-data-uri": "^1.4.4",
